Icon row fix for misalignment

--- a/src/scss/04-layouts/_icon-row.scss
+++ b/src/scss/04-layouts/_icon-row.scss
@@ -6,12 +6,14 @@
     display: flex;
     flex-flow: column;
     justify-content: space-evenly;
+    align-items: center;
+    margin: var(--content-padding) 0;
 
     @include mx.for-size("tablet-portrait-up") {
         --item-width: 50%;
         justify-content: space-around;
         flex-flow: row wrap;
-        align-items: center;
+        align-items: flex-start;
     }
     @include mx.for-size("tablet-landscape-up") {
         --item-width: #{mx.px-to-rem(250px)};
